--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
 	<div class="header">
 		<div class="search_bar_container">
-			<img class="search_icon"src="/images/magnifying-glass.png" alt="">
+			<img class="search_icon"src="images/magnifying-glass.png" alt="">
 			<input class="search" type="text" placeholder="Search Twitter">
 		</div>
-		<img class="header_settings"src="/images/setting.png" alt="">
+		<img class="header_settings"src="images/setting.png" alt="">
 	</div>
 	<div class="media_sections">
 		<div class="for_you_container">
@@ -38,12 +38,12 @@
 				<p class="fifa_info">Live <span class="fifa_info2">&#183; Halftime</span>	</p>
 			</div>
 			<div class="netherlands_score">
-				<img class="netherlands_image"src="/images/netherlands.png" alt="">
+				<img class="netherlands_image"src="images/netherlands.png" alt="">
 				<p class="team_name">Netherlands</p>
 				<p class="game_score">2</p>
 			</div>
 			<div class="us_score">
-				<img class="usa_image"src="/images/USA.png" alt="">
+				<img class="usa_image"src="images/USA.png" alt="">
 				<p class="team_name">USA</p> 
 				<p class="game_score">0</p>
 			</div>
@@ -55,7 +55,7 @@
 				<p class="tag_info">5,776 Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 		<div class="tags">
@@ -65,7 +65,7 @@
 				<p class="tag_info">5,776 Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 		<div class="tags">
@@ -75,7 +75,7 @@
 				<p class="tag_info">1,334 Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 		<div class="tags">
@@ -85,7 +85,7 @@
 				<p class="tag_info">4,598 Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 		<div class="tags">
@@ -95,7 +95,7 @@
 				<p class="tag_info">6,219 Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 		<div class="tags">
@@ -105,7 +105,7 @@
 				<p class="tag_info">1,033 Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 		<div class="tags">
@@ -115,7 +115,7 @@
 				<p class="tag_info">5,449 Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 		<div class="tags">
@@ -125,7 +125,7 @@
 				<p class="tag_info">12K Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 		<div class="tags">
@@ -135,7 +135,7 @@
 				<p class="tag_info">4,713 Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 		<div class="tags">
@@ -145,7 +145,7 @@
 				<p class="tag_info">73.1K Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 		<div class="tags">
@@ -155,7 +155,7 @@
 				<p class="tag_info">25.2K Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 		<div class="tags">
@@ -165,7 +165,7 @@
 				<p class="tag_info">34.3K Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 		<div class="tags">
@@ -175,7 +175,7 @@
 				<p class="tag_info">10.5K Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 		<div class="tags">
@@ -185,7 +185,7 @@
 				<p class="tag_info">1.07M Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 		<div class="tags">
@@ -195,7 +195,7 @@
 				<p class="tag_info">31.4K Tweets</p>
 			</div>
 			<div>
-				<img class="dots"src="/images/more.png" alt="">
+				<img class="dots"src="images/more.png" alt="">
 			</div>
 		</div>
 	</div>
@@ -220,11 +220,11 @@
 		</div>
 		<div class="signup_options">
 			<div class="google_signup">
-				<img class="google_logo"src="/images/google.png" alt="">
+				<img class="google_logo"src="images/google.png" alt="">
 				Sign up with Google
 			</div>
 			<div class="apple_signup">
-				<img class="apple_logo"src="/images/apple.png" alt="">
+				<img class="apple_logo"src="images/apple.png" alt="">
 				Sign up with Apple
 			</div>
 			<div class="phone_signup">
